--- a/css/index.css
+++ b/css/index.css
@@ -192,14 +192,12 @@ nav a:hover {
 
 .newsIndex {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 40%;
-    margin: 1.5em;
-}
+
+
 
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -211,11 +209,12 @@ nav a:hover {
 
 .container>h4 {
     color: #b01717;
+    text-align: center;
 }
 
 
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 800px) {
     .nav-toggle-label {
         display: none;
     }
@@ -275,29 +274,74 @@ nav a:hover {
         transform: scale(1, 1);
     }
 
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 27%;
+        margin: 1.5em;
+    }
+
 }
 
 @media only screen and (max-width:800px) {
 
     /* For tablets: */
-    .main {
-        width: 80%;
+    .menu,
+    .main,
+    .right {
+        width: 100%;
+    }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 100%;
+        margin: 1.5em;
+    }
+    /* .main {
+        width: 100%;
         padding: 0;
+    } */
+
+    .registrer a {
+        color: white;
+    }
+
+    .registrer {
+        text-align: right;
+        padding-right: 1em;
+
     }
 
     .right {
         width: 100%;
+    }
+
+    header {
+        position: relative;
+    }
+    .title h1{
+        text-align: center;
     }
 }
 
 @media only screen and (max-width:500px) {
 
     /* For mobile phones: */
+    
     .menu,
     .main,
     .right {
         width: 100%;
     }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 100%;
+        margin: 1.5em;
+    }
+
 
     .registrer a {
         color: white;
